tests/valid_inputs/unary_increment.cpp
// test that unary increment works

int main() {
	int a = 41;
	return ++a;
}
