tests/invalid_inputs/sema/void_ptr_postincr.cpp
// test that post increment doesn't work with void pointers

void f() {
	void *p;
	p++;
}
